Add v1 API route prefix
